[project]
name = "webhook-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "boto3>=1.34.0,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "slowapi>=0.1.9,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
